--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
 primaryColor="#8c1919"
-backgroundColor="#11617d"
-secondaryBackgroundColor="#2683b1"
-textColor="#ffffff"
+backgroundColor="#78988f"
+secondaryBackgroundColor="#e4e6dd"
+textColor="#120202"
